# ZupaSlica

./: .gitignore  CMakeLists.txt  Optimizations.md  README.md
OutSTL/: vertices.txt
include/assimp/: revision.h
include/clipper2/: clipper.offset.h
include/clipper2/src/: clipper.offset.cpp
include/glad/: glad.h
other/: hello.stl
src/: main.cpp
src/Buildplate/: Buildplate.hpp
src/Camera/: Camera.hpp
src/DrawSTL/: DrawSTL.hpp
src/FrameBuffer/: FrameBuffer.cpp  FrameBuffer.hpp
src/Intersection/: Intersection.hpp
src/Mesh/: Mesh.hpp
src/Model/: Model.hpp
src/PathOptimization/: PathOptimization.hpp
src/Shader/: Shader.hpp
src/ShaderFiles/: IntersectionShader.fs  IntersectionShader.vs  ObjectShader.fs  SlicingPlaneShader.fs  SlicingPlaneShader.vs
src/Shaders/: Shader.hpp
src/SlicerSettings/: SlicerSettings.hpp
src/Slicing/: Slicing.hpp
src/Slicing/Gcode/: GcodeWriter.hpp
src/Slicing/Infill/: CreateInfill.hpp
src/Slicing/Surface/: Surface.hpp
src/Slicing/TriangleIntersections/: CalculateIntersections.hpp
src/SlicingPlane/: SlicingPlane.hpp
src/libs/: glad.c
